Fix toolbar separator alignment, remove tabbar margin left
Former-commit-id: 821ae3a9b27e49ef05c8f1d995f8b86a4f2b25a3 [formerly f386a8398ceb222f32137d8e154078e5e143eff3]
Former-commit-id: 2dc09d92d25ee5a58b571a2e022afd1f52a9eecf
Former-commit-id: 34580f9c75ec0696243fe776c6e8b6324b744643

--- a/src/renderer/app/scss/tabs.scss
+++ b/src/renderer/app/scss/tabs.scss
@@ -4,7 +4,6 @@
   position: relative;
   overflow: hidden;
   transition: 0.3s opacity, 0.3s transform;
-  margin-left: 8px;
   margin-right: 32px;
   display: flex;
   align-items: center;
